--- a/docs/source/bibliography.bib
+++ b/docs/source/bibliography.bib
@@ -11,6 +11,49 @@
  year = {2006}
 }
 
+@article{bagul_smooth_2017,
+ author = {Bagul, Yogesh J. J},
+ journal = {International Journal of Mathematical Sciences and Engineering Applications (IJMSEA)},
+ keywords = {Absolute value function, Hyperbolic function, Smooth transcendental approximation},
+ number = {2},
+ pages = {213 -- 217},
+ title = {A smooth transcendental approximation to {|}x{|}},
+ url = {https://hal.science/hal-01713196},
+ volume = {11},
+ year = {2017}
+}
+
+@book{biegler_systematic_1997,
+ address = {Upper Saddle River, N.J},
+ author = {Biegler, Lorenz T. and Grossmann, Ignacio E. and Westerberg, Arthur W.},
+ edition = {United States Ed edition},
+ isbn = {978-0-13-492422-9},
+ language = {English},
+ month = {January},
+ publisher = {Pearson College Div},
+ title = {Systematic methods of chemical process design},
+ year = {1997}
+}
+
+@article{blanchard_accurately_2021,
+ author = {Blanchard, Pierre and Higham, Desmond J and Higham, Nicholas J},
+ doi = {10.1093/imanum/draa038},
+ journal = {IMA Journal of Numerical Analysis},
+ number = {4},
+ pages = {2311--2330},
+ title = {Accurately computing the log-sum-exp and softmax functions},
+ volume = {41},
+ year = {2021}
+}
+
+@inproceedings{chen_log_2018,
+ author = {Chen, Pengfei and Chen, Guangyong and Zhang, Shengyu},
+ booktitle = {International {Conference} on {Learning} {Representations}},
+ title = {Log hyperbolic cosine loss improves variational auto-encoder},
+ url = {https://openreview.net/forum?id=rkglvsC9Ym},
+ year = {2018}
+}
+
 @article{colonna_organic_2015,
  abstract = {The cumulative global capacity of organic Rankine cycle (ORC) power systems for the conversion of renewable and waste thermal energy is undergoing a rapid growth and is estimated to be approx. 2000 MWe considering only installations that went into operation after 1995. The potential for the conversion of the thermal power coming from liquid-dominated geothermal reservoirs, waste heat from primary engines or industrial processes, biomass combustion, and concentrated solar radiation into electricity is arguably enormous. ORC technology is possibly the most flexible in terms of capacity and temperature level and is currently often the only applicable technology for the conversion of external thermal energy sources. In addition, ORC power systems are suitable for the cogeneration of heating and/or cooling, another advantage in the framework of distributed power generation. Related research and development is therefore very lively. These considerations motivated the effort documented in this article, aimed at providing consistent information about the evolution, state, and future of this power conversion technology. First, basic theoretical elements on the thermodynamic cycle, working fluid, and design aspects are illustrated, together with an evaluation of the advantages and disadvantages in comparison to competing technologies. An overview of the long history of the development of ORC power systems follows, in order to place the more recent evolution into perspective. Then, a compendium of the many aspects of the state of the art is illustrated: the solutions currently adopted in commercial plants and the main-stream applications, including information about exemplary installations. A classification and terminology for ORC power plants are proposed. An outlook on the many research and development activities is provided, whereby information on new high-impact applications, such as automotive heat recovery is included. Possible directions of future developments are highlighted, ranging from efforts targeting volume-produced stationary and mobile mini-ORC systems with a power output of few kWe, up to large MWe base-load ORC plants.},
  author = {Colonna, Piero and Casati, Emiliano and Trapp, Carsten and Mathijssen, Tiemo and Larjola, Jaakko and Turunen-Saaresti, Teemu and Uusitalo, Antti},
@@ -22,6 +65,14 @@
  title = {Organic {Rankine} cycle power systems: {From} the concept to current technology, applications, and an outlook to the future},
  volume = {137},
  year = {2015}
+}
+
+@article{cook_basic_2011,
+ author = {Cook, John},
+ journal = {Unpublished notes},
+ title = {Basic properties of the soft maximum},
+ url = {https://www.johndcook.com/soft_maximum.pdf},
+ year = {2011}
 }
 
 @article{denton_computational_1998,
@@ -133,6 +184,21 @@
  year = {1984}
 }
 
+@article{kamath_equation-oriented_2010,
+ abstract = {This paper deals with handling of the cubic equation of state (CEOS) in equation-oriented (EO) process optimization. The roots of the CEOS are generally computed by subroutine-based calculations that involve logical if-else conditions. This approach can lead to nonsmoothness and convergence issues when used with gradient-based solvers in an EO framework. In this work, we propose a new general EO approach for selecting the appropriate root of the CEOS by incorporating derivative constraints specific to the desired (vapor or liquid) phase. We prove that these constraints are capable of isolating the liquid, middle and vapor root. The derivative constraints are tested using the EO phase-equilibrium formulation of Gopal and Biegler (1999) which is suitably extended for handling CEOS and relaxing the derivative constraints in the event of disappearance of phases. Using numerical examples involving simulation of flash vessels and optimization of distillation column, it is demonstrated that the proposed EO formulation always selects the appropriate roots, handles missing phases on distillation trays and flash units, and is fairly robust to different starting points in the phase envelopes.},
+ author = {Kamath, Ravindra S. and Biegler, Lorenz T. and Grossmann, Ignacio E.},
+ doi = {10.1016/j.compchemeng.2010.07.028},
+ issn = {0098-1354},
+ journal = {Computers \& Chemical Engineering},
+ keywords = {Complementarity constraints, Cubic equation of state, Flash calculations, Nonlinear programming, Process optimization, Simulation},
+ number = {12},
+ pages = {2085--2096},
+ series = {10th {International} {Symposium} on {Process} {Systems} {Engineering}, {Salvador}, {Bahia}, {Brasil}, 16-20 {August} 2009},
+ title = {An equation-oriented approach for handling thermodynamics based on cubic equation of state in process optimization},
+ volume = {34},
+ year = {2010}
+}
+
 @article{kieffer_sound_1977,
  author = {Kieffer, Susan Werner},
  doi = {10.1029/JB082i020p02895},
@@ -171,6 +237,17 @@
  year = {1996}
 }
 
+@article{marquardt_algorithm_1963,
+ author = {Marquardt, Donald W.},
+ journal = {Journal of the society for industrial and applied mathematics},
+ number = {2},
+ pages = {431--441},
+ title = {An algorithm for least-squares estimation of nonlinear parameters},
+ url = {https://www.jstor.org/stable/2098941},
+ volume = {11},
+ year = {1963}
+}
+
 @article{menter_two-equation_1994,
  author = {Menter, F. R.},
  doi = {10.2514/3.12149},
@@ -194,6 +271,17 @@
  year = {1993}
 }
 
+@techreport{more_user_1980,
+ address = {Argonne, Illinois},
+ author = {Moré, Jorge J. and Garbow, Burton S. and Hillstrom, Kenneth E.},
+ institution = {Argonne National Laboratory},
+ number = {ANL-80-74},
+ pages = {261},
+ title = {User guide for {MINPACK}-1},
+ url = {https://cds.cern.ch/record/126569/files/CM-P00068642.pdf},
+ year = {1980}
+}
+
 @misc{noauthor_ansys_2023,
  publisher = {ANSYS Inc.},
  title = {Ansys {Turbogrid} reference guide},
@@ -212,6 +300,47 @@
  year = {2023}
 }
 
+@book{nocedal_numerical_2006,
+ address = {New York},
+ author = {Nocedal, Jorge and Wright, Stephen J.},
+ edition = {2nd},
+ isbn = {978-0-387-30303-1},
+ keywords = {Mathematical optimization},
+ publisher = {Springer},
+ series = {Springer series in operations research},
+ title = {Numerical optimization},
+ year = {2006}
+}
+
+@article{pantelides_equation-oriented_1993,
+ abstract = {Some of the key issues associated with the equation-oriented approach to process modelling and simulation are examined. It is argued that most processes and operations of industrial interest have combined discrete and continuous characteristics. Furthermore, effective tools for describing both the physical behaviour of process systems, and the external control actions and disturbances imposed on them are required. In both areas, major concerns include managing the complexity of real processes, and supporting the development of general components that can be re-used within a number of different applications. Recent work in this direction is reviewed. A general mathematical statement for the combined discrete and continuous dynamic simulation problem is presented, and the use of symbolic, structural and numerical solution techniques is discussed. Methods for the diagnosis of problems that are either badly-posed or difficult to solve with currently available methods are also considered. The areas of modelling distributed parameter systems, and supporting the formal description and solution of general optimisation problems are identified as being of strategic importance for the future evolution of general-purpose process modelling environments.},
+ author = {Pantelides, C. C. and Barton, P. I.},
+ doi = {10.1016/0098-1354(93)80240-N},
+ journal = {Computers \& Chemical Engineering},
+ keywords = {Dynamic simulation, combined simulation, differential-algebraic equations, numerical methods, process modelling},
+ pages = {S263--S285},
+ series = {European {Symposium} on {Computer} {Aided} {Process} {Engineering}},
+ title = {Equation-oriented dynamic simulation current status and future perspectives},
+ volume = {17},
+ year = {1993}
+}
+
+@article{powell_hybrid_1970,
+ author = {Powell, Michael .J.D.},
+ journal = {Numerical methods for nonlinear algebraic equations, , Gordon and Breach},
+ pages = {87--114},
+ title = {A hybrid method for nonlinear equations.},
+ year = {1970}
+}
+
+@article{ramirez_x_2013,
+ author = {Ramirez, Carlos and Sanchez, Reinaldo and Kreinovich, Vladik and Argaez, Miguel},
+ journal = {Departmental Technical Reports (CS)},
+ title = {√(x² + μ) is the most computationally efficient smooth approximation to {|}x{|}: {A} proof},
+ url = {https://scholarworks.utep.edu/cs_techrep/789},
+ year = {2013}
+}
+
 @article{romei_computational_2021,
  author = {Romei, Alessandro and Persico, Giacomo},
  doi = {10.1016/j.applthermaleng.2021.116816},
@@ -223,6 +352,16 @@
  urldate = {2023-02-27},
  volume = {190},
  year = {2021}
+}
+
+@misc{saleh_statistical_2022,
+ author = {Saleh, Resve A. and Saleh, A. K. Md Ehsanes},
+ doi = {10.48550/arXiv.2208.04564},
+ keywords = {Computer Science - Machine Learning, Statistics - Machine Learning},
+ note = {arXiv:2208.04564 [cs, stat]},
+ publisher = {arXiv},
+ title = {Statistical properties of the log-cosh loss function used in machine learning},
+ year = {2022}
 }
 
 @article{sebestyen_design_1985,
@@ -237,6 +376,67 @@
  title = {Design of two-phase turbines and geothermal electric power-plants in {Hungary}},
  urldate = {2023-12-17},
  volume = {14},
+ year = {1985}
+}
+
+@article{shacham_equation_1982,
+ author = {Shacham, M. and Macchieto, S. and Stutzman, L. F. and Babcock, P.},
+ doi = {10.1016/0098-1354(82)87001-4},
+ journal = {Computers \& Chemical Engineering},
+ number = {2},
+ pages = {79--95},
+ title = {Equation oriented approach to process flowsheeting},
+ volume = {6},
+ year = {1982}
+}
+
+@article{span_new_1996,
+ author = {Span, Roland and Wagner, Wolfgang},
+ doi = {10.1063/1.555991},
+ issn = {0047-2689},
+ journal = {Journal of Physical and Chemical Reference Data},
+ note = {Publisher: American Institute of Physics},
+ number = {6},
+ pages = {1509--1596},
+ title = {A new equation of state for carbon dioxide covering the fluid region from the triple‐point temperature to 1100 {K} at pressures up to 800 {MPa}},
+ volume = {25},
+ year = {1996}
+}
+
+@article{span_reference_2000,
+ abstract = {A new formulation for the thermodynamic properties of nitrogen has been developed. Many new data sets have become available, including high accuracy data from single and dual-sinker apparatuses which improve the accuracy of the representation of the pρT surface of gaseous, liquid, and supercritical nitrogen, including the saturation states. New measurements of the speed of sound from spherical resonators yield accurate information on caloric properties in gaseous and supercritical nitrogen. Isochoric heat capacity and enthalpy data have also been published. Sophisticated procedures for the optimization of the mathematical structure of equations of state and special functional forms for an improved representation of data in the critical region were used. Constraints regarding the structure of the equation ensure reasonable results up to extreme conditions of temperature and pressure. For calibration applications, the new reference equation is supplemented by a simple but also accurate formulation, valid only for supercritical nitrogen between 250 and 350 K at pressures up to 30 MPa. The uncertainty in density of the new reference equation of state ranges from 0.02\% at pressures less than 30 MPa up to 0.6\% at very high pressures, except in the range from 270 to 350 K at pressures less than 12 MPa where the uncertainty in density is 0.01\%. The equation is valid from the triple point temperature to temperatures of 1000 K and up to pressures of 2200 MPa. From 1000 to 1800 K, the equation was validated with data of limited accuracy. The extrapolation behavior beyond 1800 K is reasonable up to the limits of chemical stability of nitrogen, as indicated by comparison to experimental shock tube data.},
+ author = {Span, Roland and Lemmon, Eric W. and Jacobsen, Richard T and Wagner, Wolfgang and Yokozeki, Akimichi},
+ doi = {10.1063/1.1349047},
+ issn = {0047-2689},
+ journal = {Journal of Physical and Chemical Reference Data},
+ number = {6},
+ pages = {1361--1433},
+ title = {A reference equation of state for the thermodynamic properties of nitrogen for temperatures from 63.151 to 1000 {K} and pressures to 2200 {MPa}},
+ volume = {29},
+ year = {2000}
+}
+
+@misc{weisstein_vector_2023,
+ author = {Weisstein, Eric W.},
+ journal = {MathWorld -- A Wolfram Web Resource},
+ language = {en},
+ note = {Publisher: Wolfram Research, Inc.},
+ title = {Vector norm},
+ url = {https://mathworld.wolfram.com/VectorNorm.html},
+ year = {2023}
+}
+
+@article{westerberg_thoughts_1985,
+ abstract = {This paper describes desirable attributes that should be present in commercially available equation-oriented flowsheeting systems developed in the future. Areas covered include user/program communication, modeling considerations for complex flowsheets and the solving of models.},
+ author = {Westerberg, Arthur W. and Benjamin, Dean R.},
+ doi = {10.1016/0098-1354(85)80026-0},
+ issn = {0098-1354},
+ journal = {Computers \& Chemical Engineering},
+ number = {5},
+ pages = {517--526},
+ series = {Papers from the 25th {CONICET} {International} {Conference}},
+ title = {Thoughts on a future equation-oriented flowsheeting system},
+ volume = {9},
  year = {1985}
 }
 
